<resources>
    <string name="app_name">Petofy</string>
    <string name="email">example@xyz.com</string>
    <string name="password">* * * * * * *</string>
    <string name="Register_password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Create Account</string>
    <string name="firstName">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="phoneNumber">Contact Number</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="forgetPass">Forget Password ?</string>
    <string name="alreadyHaveAccount">Already Have Account ?</string>
    <string name="createAnAccount">Create An Account</string>
    <string name="dontHaveAccount">Don\'t Have An Account ?</string>
    <string name="petofy">PETOFY</string>
    <string name="petofyparent">PETOFY PARENTS</string>
    <string name="donation">DONATION</string>
    <string name="adoption_toolbar">ADOPTION</string>
    <string name="find_pet_for_adoption">FIND PET FOR ADOPTION</string>
    <string name="donation_details">DONATION DETAILS</string>
    <string name="adpotion_donation">ADOPTION &amp; DONATION</string>
    <string name="CheckInternet">Check your internet connection</string>
    <string name="openSetting">Open Setting</string>
    <string name="cameraAndStorage">Location, Camera &amp; Storage</string>
    <string name="permissiondesc">Allow Location, Storage &amp; Camera permission to continue...</string>
    <string name="newVersion">Petofy new version is available!</string>
    <string name="pleaseDownload">Please download the latest version. </string>
    <string name="download">Download</string>
    <string name="LastPrescription">Last Prescription</string>
    <string name="immunizationChartLabel">Immunization Chart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="details">Enter your details</string>
    <string name="Security">Security</string>
    <string name="update_profile">Veterinarian Account</string>
    <string name="address">Address</string>
    <string name="postal_code">Postal Code</string>
    <string name="register_pets_home">PET REGISTER</string>
    <string name="website">Website</string>
    <string name="social_media_url">Social Media URL</string>
    <string name="vet_registration_number">Vet Registration Number</string>
    <string name="vet_qualification">Vet Qualification</string>
    <string name="updateProfile">Update Profile</string>
    <string name="submit">Submit</string>
    <string name="changePass">Change Password</string>
    <string name="petId">Pet Id</string>
    <string name="dateofbirth">Date Of Birth</string>
    <string name="petGender">Pet Sex</string>
    <string name="petParent">Pet Parent</string>
    <string name="petname">Pet Name</string>
    <string name="petColor">Pet Color</string>
    <string name="petBreed">Pet Breedr</string>
    <string name="nature_of_visits">Nature Of Visit*</string>
    <string name="color">Color</string>
    <string name="petcolor"><![CDATA[Brown & White]]></string>
    <string name="viewReports">View Reports</string>
    <string name="viewDetails">View Details</string>
    <string name="reports">REPORTS</string>
    <string name="appointment">Appointments</string>
    <string name="register_pets">Register Pets</string>
    <string name="add_pet">ADD PET</string>
    <string name="pet_details">Pet Details</string>
    <string name="selectReports">Select Reports</string>
    <string name="petownwer">Pet Parent</string>
    <string name="double_Dot">:</string>
    <string name="xrayReport">Test/X-Ray Report</string>
    <string name="xrayReport_toolbr">X-RAY REPORT</string>
    <string name="labTestReport">Lab Test Report</string>
    <string name="Hospitalization"><![CDATA[Hospitalization]]></string>
    <string name="clinicVisits">Clinic Visit Report</string>
    <string name="emailtext">Email</string>
    <string name="appointments">Appointments</string>
    <string name="medical_history">Medical History</string>
    <string name="staff">STAFF</string>
    <string name="allpets">All Pets</string>
    <string name="allStaff">ALL STAFF</string>
    <string name="adoption">Adoption/Donation</string>
    <string name="permission">PERMISSION</string>
    <string name="add_new_pet">Add New Pet</string>
    <string name="add_clinic_data">Clinic Visit</string>
    <string name="name">Name</string>
    <string name="acitivated">Activated</string>
    <string name="add_staff">Add Staff</string>
    <string name="edit_staff">Edit Staff</string>
    <string name="edit">EDIT</string>
    <string name="accepted">ACCEPTED</string>
    <string name="view_deatails">VIEW DETAILS</string>
    <string name="update">Update</string>
    <string name="test_x_ray">Test/X-rays</string>
    <string name="managePet">Manage Pet-labwork</string>
    <string name="recentVisits">Recent Visits</string>
    <string name="printIdCard">Print Id Card</string>
    <string name="view_history">View History</string>
    <string name="addNewVisits">ADD NEW VISITS</string>
    <string name="pet_category">Pet Category</string>
    <string name="pet_name">Pet Name</string>
    <string name="veterinarian">Veterinarian*</string>
    <string name="size">Size</string>
    <string name="age">Age</string>
    <string name="breed">Breed</string>
    <string name="ParentName">Parent Name</string>
    <string name="save">Save</string>
    <string name="editpet">Edit Pet</string>
    <string name="desc">Description</string>
    <string name="petimages">Pet Images</string>
    <string name="petimagesInfo">(You can add maximum 5 of your pet images)</string>
    <string name="doctorPrescription">Doctor\'s Prescription</string>
    <string name="visit_date">Visit Date</string>
    <string name="natureofvisit">Nature Of Visit</string>
    <string name="weight">Weight</string>
    <string name="temprature">Temperature</string>
    <string name="vaccine">Vaccine</string>
    <string name="description">Symptoms</string>
    <string name="description1">Description</string>
    <string name="diagosis">Diagnosis</string>
    <string name="remarks">Treatment Remarks</string>
    <string name="testdate">Test Date</string>
    <string name="testType">Test Type</string>
    <string name="result">Result</string>
    <string name="requestingVet">Requesting Vet</string>
    <string name="vetPhone">Vet Phone</string>
    <string name="labType">Lab Type</string>
    <string name="hospitalType">Hospital Type</string>
    <string name="hospitalname">Hospital Name</string>
    <string name="admissiondate">Admission Date</string>
    <string name="DeleteReport">Delete Report</string>
    <string name="RequestingContact">Requesting Contact</string>
    <string name="resaonoftest">Reason Of Test</string>
    <string name="testName">Test Name</string>
    <string name="labPhone">Lab Phone</string>
    <string name="hospital_type">Hospital Type</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="admission_date">Admission Date</string>
    <string name="resaonofHospitalization">Reason Of Hospitalization</string>
    <string name="diagosisTreatment">Diagnosis Treatment Procedure</string>
    <string name="RecommendedFollowup">Recommended Follow-up</string>
    <string name="FollowupDate">Follow-up Date</string>
    <string name="addTestXRay">Add Test/X-rays</string>
    <string name="manage_pet_lab_work">Manage pet-Lab work</string>
    <string name="addhospitalization">Add Hospitalizations/Surgeries</string>
    <string name="labname">Lab Name</string>
    <string name="profile">Profile</string>
    <string name="updateParent">Update Your Profile</string>
    <string name="yourPets">Yours Pets</string>
    <string name="home">Home</string>
    <string name="confimation">Confirmation</string>
    <string name="log_out_msg">Are you sure, You want to exit</string>
    <string name="yes">Yes</string>
    <string name="firstparagraph">Petofy and its subsidiaries (collectively “Company” “we” or “us”) respects the privacy of its users (“User(s)” or “you”) and is committed to protect the personal information that its Users share with it. This Privacy Policy is to inform you what information we collect when you use our cloud-native security platform service (collectively, the “Service”). We believe that you have a right to know our practices regarding the information we may collect and use when you use our products. Capitalized terms which are not defined herein, shall have the meaning ascribed to them in our Terms of Use which this Privacy Policy is incorporated thereto by reference (together, the “Terms”).</string>
    <string name="Secondparagraph">1. Your Consent BY USING THE SERVICE, YOU AGREE TO THE TERMS AND CONDITIONS SET FORTH IN THIS PRIVACY POLICY (THE “PRIVACY POLICY”), INCLUDING TO THE COLLECTION AND PROCESSING OF YOUR PERSONAL INFORMATION (AS DEFINED BELOW). IF YOU DISAGREE TO ANY TERM PROVIDED HEREIN, YOU MAY NOT USE THE SERVICE.</string>
    <string name="Thirdparagraph">2. Which information may we collect on our users? We may collect two types of data and information from our Users:</string>
    <string name="fourthparagraph"> a. First type of information is non-identifiable and anonymous information (“Non-personal Information”). We are not aware of the identity of the User from which we have collected the Non-personal Information. Non-Personal Information is any unconcealed information which is available to us while Users are using the Service. Non-personal Information, which is being gathered, consists of technical information and behavioral information, such as:           </string>
    <string name="fifthparagraph">(i) network connection such as IPs and ports; \n(ii) instance meta-data from your cloud provider, or \n(iii) data from orchestration platforms.</string>
    <string name="sixthparagraph">b. Second type of information is individually identifiable information (“Personal Information”). This information may in itself or taken together with additional information available to us identify an individual or may be of a private and/or sensitive nature. We do not collect any Personal Information from you or related to you without your approval, which is obtained, inter alia, through your active acceptance of the Terms and the Privacy Policy. TO THE EXTENT THAT YOU PROVIDE TO US ANY PERSONAL INFORMATION IN CONNECTION WITH ANY THIRD PARTY, INCLUDING ANY OF YOUR PERSONNEL YOU ARE SOLELY RESPONSIBLE TO RECEIVE AND HEREBY REPRESENT AND UNDERTAKE TO HAVE RECEIVED THE CONSENT, AUTHORITY, PERMISSION AND APPROVAL OF SUCH PERSON AND PROVIDED THEM WITH SUFFICIENT DISCLOSURES, TO ALLOW THE USE OF SUCH PERSONAL INFORMATION, AND TO ALLOW US TO ACCESS, STORE, COLLECT, ANALYZE AND PROCESS SUCH PERSONAL INFORMATION AS DETAILED HEREIN</string>
    <string name="seventhparagraph">3. What are the Purposes of the Collection of Information? Non-personal Information is collected in order to: Provide the Service; Track the usage of users in the system; Provide our User with a better user experience. Personal Information is collected in order to: Be able to provide the Demo; Be able to contact Users who requested such contact to be made, for the purpose of providing them with further information; Be able to provide the Users updates about the Company’s developments.</string>
    <string name="eightparagraph">"4. Deletion of Personal Information. If for any reason you wish to modify or delete your Personal Information please send us an email to support@Petofy.com, and we will make reasonable efforts to modify or delete any such Personal Information pursuant to any applicable privacy laws. Note that unless you instruct us otherwise, we may retain your Personal Information for as legally required. "</string>
</resources>