<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/whiteColor"
    android:layout_height="match_parent"
    tools:context=".activty.RegisterActivity">


    <RelativeLayout
        android:id="@+id/send_phone_number_RL"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="#F5F7FA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_arrow_IV"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:padding="12dp"
            android:src="@drawable/back_arrow_welcome" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:padding="15dp"
            android:src="@drawable/logo_small_size" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toBottomOf="@id/send_phone_number_RL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/fields_RL"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/details_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/details_layout"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/updateParent"
                        android:fontFamily="@font/montserrat"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:gravity="bottom"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:padding="5dp"
                        android:textColor="@color/black_color"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/firstName_RL"
                android:layout_below="@+id/details_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:weightSum="2"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"
                    tools:ignore="UselessParent">


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_weight="1"
                        app:hintTextColor="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/firstName_TIL">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/firstName_TIET"
                            android:fontFamily="@font/montserrat"
                            android:backgroundTint="@color/colorPrimary"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:hint="@string/firstName"
                            android:inputType="textCapWords"
                            android:maxLines="1"
                            android:textSize="16sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_weight="1"
                        android:id="@+id/lastName_TIL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/lastName_TIET"
                            android:fontFamily="@font/montserrat"
                            android:backgroundTint="@color/colorPrimary"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:maxLines="1"
                            android:inputType="textCapWords"
                            android:textSize="16sp"
                            android:hint="@string/lastname" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>




            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:id="@+id/email_RL"
                android:layout_below="@+id/firstName_RL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/email_TIL">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:inputType="textEmailAddress"
                        android:fontFamily="@font/montserrat"
                        android:backgroundTint="@color/colorPrimary"
                        android:layout_height="50dp"
                        android:hint="@string/email"
                        android:textSize="16sp"
                        android:id="@+id/email_TIET"/>

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/phoneNumber_RL"
                android:layout_below="@+id/email_RL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/number_TIL">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:visibility="visible"
                        android:layout_height="50dp"
                        android:hint="@string/phoneNumber"
                        android:backgroundTint="@color/colorPrimary"
                        android:maxLength="10"
                        android:textSize="16sp"
                        android:id="@+id/number_TIET"/>

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>


            <RelativeLayout
                android:visibility="visible"
                android:id="@+id/address_RL"
                android:layout_below="@+id/phoneNumber_RL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/address_TIL">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:inputType="textCapWords"
                        android:layout_height="80dp"
                        android:hint="@string/address"
                        android:backgroundTint="@color/colorPrimary"
                        android:gravity="center_vertical"
                        android:textSize="16sp"
                        android:id="@+id/address_TIET"
                        tools:ignore="RtlHardcoded" />

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>


        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/update_BT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/next_button_green_bg"
        android:fontFamily="@font/nunito"
        android:text="Update"
        android:textAllCaps="false"
        android:textColor="@color/whiteColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>